# Unifi-Agent

./: .env.sample  .gitignore  .mcp.json.sample  CLAUDE.md  README.md
.claude/skills/unifi/: SKILL.md
.claude/skills/unifi/references/: api-overview.md  clients.md  devices.md  firewall.md  networks.md  schema-clients.json  schema-devices.json  schema-firewall.json  schema-networks.json  schema-traffic-lists.json  schema-vouchers.json  schema-wifi.json  supporting.md  traffic-lists.md  vouchers.md  wifi.md
ssh-mcp/: hosts.json.sample  pyproject.toml  requirements.txt  server.py
tests/: test_ssh_security.py  test_unifi_security.py
unifi-mcp/: pyproject.toml  server.py
