[project]
name = "ssh-mcp"
version = "0.1.0"
description = "MCP server for SSH command execution on remote hosts"
requires-python = ">=3.11"
dependencies = ["mcp[cli]", "asyncssh"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
