[project]
name = "ssh-mcp"
version = "0.1.0"
description = "MCP server for SSH command execution on remote hosts"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.26,<2", "asyncssh>=2.22,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
