[project]
name = "unifi-mcp"
version = "0.1.0"
description = "MCP server exposing the UniFi Network API as tools"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.26,<2", "httpx>=0.28,<1", "pydantic>=2.12,<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
